新增模拟键盘延迟输入
新增模拟键盘延迟输入

--- a/ToolBox/Components/Layout/NavMenu.razor
+++ b/ToolBox/Components/Layout/NavMenu.razor
@@ -29,5 +29,6 @@
         <MudNavLink Href="uuid" Icon="@Icons.Material.Filled.Fingerprint">UUID或GUID批量生成生成</MudNavLink>
         <MudNavLink Href="diff" Icon="@Icons.Material.Filled.Difference">文本差异对比</MudNavLink>
         <MudNavLink Href="base64-image" Icon="@Icons.Material.Filled.Image">Base64 图片预览</MudNavLink>
+        <MudNavLink Href="clipboard-sequence" Icon="@Icons.Material.Filled.Keyboard">剪贴板固定序列输入</MudNavLink>
     </MudNavGroup>
 </MudNavMenu>
