--- a/ToolBox/Components/Layout/NavMenu.razor
+++ b/ToolBox/Components/Layout/NavMenu.razor
@@ -11,6 +11,7 @@
     <MudNavGroup title="网络" Icon="@Icons.Material.Filled.Public" Expanded="true">
         <MudNavLink Href="request-to-curl" Icon="@Icons.Material.Filled.SwapHoriz">请求转 cURL</MudNavLink>
         <MudNavLink Href="socket-tool" Icon="@Icons.Material.Filled.SettingsEthernet">Socket 测试</MudNavLink>
+        <MudNavLink Href="websocket-tool" Icon="@Icons.Material.Filled.Wifi">WebSocket 测试</MudNavLink>
     </MudNavGroup>
     <MudNavGroup title="计算工具" Icon="@Icons.Material.Filled.Calculate" Expanded="true">
         <MudNavLink Href="bitwise" Icon="@Icons.Material.Filled.Memory">位运算</MudNavLink>
